Added call backs for the Get userdemographic/user/userweight